# agent-python-openai-prompty-langchain

./: README.md  azure.yaml  validate_deployment.ipynb
.github/workflows/: azure-dev-validation.yml
deployment/: langchain-deployment.yaml
docs/: README.md
infra/: main.bicep  main.bicepparam
infra/core/host/: ml-online-endpoint.bicep
infra/hooks/: postprovision.ps1  postprovision.sh
src/prompty-langchain-agent/: .env.example  pyproject.toml  startup.sh
src/test-app/: pyproject.toml
test-app/: .env.example  pyproject.toml
